Bash_Scripting/4_Redirection/errors
cc     hello.c   -o hello
hello.c: In function ‘main’:
hello.c:6:2: error: expected ‘;’ before ‘return’
  return 0;
  ^
make: *** [hello] Error 1
